implementate le funzioni scriviRecensione e ricercaSpettacolo, mancano le global exception, le request e le response per tutte le classi