@@ -1,8 +1,12 @@
 package com.example.andiamo_a_teatro.services;
 
 import com.example.andiamo_a_teatro.entities.Biglietto;
+import com.example.andiamo_a_teatro.entities.Recensione;
+import com.example.andiamo_a_teatro.entities.Spettacolo;
 import com.example.andiamo_a_teatro.entities.Utente;
 import com.example.andiamo_a_teatro.repositories.BigliettoRepository;
+import com.example.andiamo_a_teatro.repositories.RecensioneRepository;
+import com.example.andiamo_a_teatro.repositories.SpettacoloRepository;
 import com.example.andiamo_a_teatro.repositories.UtenteRepository;
 import com.example.andiamo_a_teatro.response.BigliettoResponse;
 import com.example.andiamo_a_teatro.response.UtenteResponse;
@@ -24,9 +28,11 @@ public class UtenteService {
     @Autowired
     private BigliettoRepository bigliettoRepository;
     @Autowired
-    private SpettacoloService spettacoloService;
+    private SpettacoloRepository spettacoloRepository;
+    @Autowired
+    private RecensioneRepository recensioneRepository;
 
-    private Utente convertToUtente(UtenteResponse utenteResponse) {
+    private Utente mapToUtente(UtenteResponse utenteResponse) {
         Utente.UtenteBuilder utenteBuilder = Utente.builder()
                 .id(utenteResponse.getId_utente())
                 .nome(utenteResponse.getNome())
@@ -42,17 +48,30 @@ public class UtenteService {
                 .map(bigliettoRepository::findById)
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .collect(Collectors.toList());
+                .toList();
 
-        return utenteBuilder.bigliettiUtente(bigliettiUtente)
+        List<Recensione> recensioniUtente = utenteResponse.getId_recensione().stream()
+                .map(recensioneRepository::findById)
+                .filter(Optional::isPresent)
+                .map(Optional::get)
+                .toList();
+
+        return utenteBuilder
+                .bigliettiUtente(bigliettiUtente)
+                .recensioniUtente(recensioniUtente)
                 .build();
     }
 
-    private UtenteResponse convertToUtenteResponse(Utente utente) {
+    private UtenteResponse mapToUtenteResponse(Utente utente) {
         List<Long> idBiglietti = Optional.ofNullable(utente.getBigliettiUtente())
                 .orElse(Collections.emptyList())
                 .stream()
                 .map(Biglietto::getId)
+                .collect(Collectors.toList());
+        List<Long> idRecensioni = Optional.ofNullable(utente.getRecensioniUtente())
+                .orElse(Collections.emptyList())
+                .stream()
+                .map(Recensione::getId)
                 .collect(Collectors.toList());
 
         return UtenteResponse.builder()
@@ -66,10 +85,11 @@ public class UtenteService {
                 .password(utente.getPassword())
                 .saldo(utente.getSaldo())
                 .id_biglietto(idBiglietti)
+                .id_recensione(idRecensioni)
                 .build();
     }
 
-    private BigliettoResponse convertToBigliettoResponse(Biglietto biglietto) {
+    private BigliettoResponse mapToBigliettoResponse(Biglietto biglietto) {
         return BigliettoResponse.builder()
                 .id_biglietto(biglietto.getId())
                 .timestamp(biglietto.getTimestamp())
@@ -87,6 +107,10 @@ public class UtenteService {
         Biglietto biglietto = bigliettoRepository.findById(bigliettoId)
                 .orElseThrow(() -> new IllegalArgumentException("Biglietto non trovato con ID: " + bigliettoId));
 
+        if (biglietto.getUtente() != null) {
+            throw new IllegalArgumentException("Il biglietto è già stato acquistato.");
+        }
+
         double prezzoBiglietto = biglietto.getSpettacolo().getPrezzo();
         if (utente.getSaldo() >= prezzoBiglietto) {
             double nuovoSaldo = utente.getSaldo() - prezzoBiglietto;
@@ -94,18 +118,11 @@ public class UtenteService {
             utenteRepository.saveAndFlush(utente);
 
             utente.getBigliettiUtente().add(biglietto);
-
             biglietto.setUtente(utente);
 
             bigliettoRepository.saveAndFlush(biglietto);
 
-            return BigliettoResponse.builder()
-                    .id_biglietto(biglietto.getId())
-                    .timestamp(biglietto.getTimestamp())
-                    .id_utente(utenteId)
-                    .id_spettacolo(biglietto.getSpettacolo().getId())
-                    .id_posto(biglietto.getPosto().getId())
-                    .build();
+            return mapToBigliettoResponse(biglietto);
         } else {
             throw new IllegalArgumentException("L'utente non ha abbastanza soldi per acquistare il biglietto.");
         }
@@ -115,16 +132,16 @@ public class UtenteService {
         Utente utente = utenteRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("Utente non trovato con id: " + id));
 
-        return convertToUtenteResponse(utente);
+        return mapToUtenteResponse(utente);
     }
 
     public List<UtenteResponse> getAllUtenti() {
-        return utenteRepository.findAll().stream().map(this::convertToUtenteResponse).toList();
+        return utenteRepository.findAll().stream().map(this::mapToUtenteResponse).toList();
     }
 
     public UtenteResponse createUtente(Utente utente) {
         utenteRepository.saveAndFlush(utente);
-        return convertToUtenteResponse(utente);
+        return mapToUtenteResponse(utente);
     }
 
     public UtenteResponse updateUtente(Long id, Utente newUtente) {
@@ -140,10 +157,32 @@ public class UtenteService {
                 .isLoggato(newUtente.getIsLoggato())
                 .build();
         utenteRepository.saveAndFlush(utente);
-        return convertToUtenteResponse(utente);
+        return mapToUtenteResponse(utente);
     }
 
     public void deleteUtenteById(Long id) {
         utenteRepository.deleteById(id);
     }
+
+    public Recensione scriviRecensione(Long utenteId, Long spettacoloId, String testo, int voto) {
+        Optional<Utente> utente = utenteRepository.findById(utenteId);
+        if (utente.isEmpty()) {
+            throw new IllegalArgumentException("Utente non trovato con id: " + utenteId);
+        }
+
+        Optional<Spettacolo> spettacolo = spettacoloRepository.findById(spettacoloId);
+        if (spettacolo.isEmpty()) {
+            throw new IllegalArgumentException("Utente non trovato con id: " + spettacoloId);
+        }
+
+        Recensione recensione = Recensione.builder()
+                .testo(testo)
+                .voto(voto)
+                .spettacolo(spettacolo.get())
+                .utente(utente.get())
+                .build();
+
+        return recensioneRepository.saveAndFlush(recensione);
+    }
+
 }
